<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="kr.co.tjeit.beautysalon.ViewDesignerDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/designer_detail_activity_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="사람이름이 표시됩니다."
            android:textSize="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/genderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="성별이 표시됩니다."
            android:textSize="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/nickNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="닉네임이 표시됩니다."
            android:textSize="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/major_age" />

        <TextView
            android:id="@+id/majorAgeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="연령대가 표시됩니다."
            android:textSize="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/ratingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="평점이 표시됩니다."
            android:textSize="17dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:src="@drawable/rating_star2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:src="@drawable/rating_star2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:src="@drawable/rating_star2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:src="@drawable/rating_star2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:src="@drawable/rating_star2"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/portfolioListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/checkScheduleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_schedule" />

        <Button
            android:id="@+id/reservationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reservation_exe" />


    </LinearLayout>


</LinearLayout>
